--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "@auth/drizzle-adapter": "^1.7.2",
     "@clerk/nextjs": "^6.3.4",
+    "@clerk/themes": "^2.1.45",
     "@t3-oss/env-nextjs": "^0.10.1",
     "@vercel/postgres": "^0.10.0",
     "drizzle-orm": "^0.33.0",
