--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@clerk/nextjs": "^6.3.4",
     "@clerk/themes": "^2.1.45",
     "@t3-oss/env-nextjs": "^0.10.1",
+    "@uploadthing/react": "^7.1.1",
     "@vercel/postgres": "^0.10.0",
     "drizzle-orm": "^0.33.0",
     "geist": "^1.3.0",
@@ -32,6 +33,7 @@
     "postgres": "^3.4.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "uploadthing": "^7.3.0",
     "zod": "^3.23.3"
   },
   "devDependencies": {
